# HoloPlayground

./: .gitignore  .gitmodules  BUILDING.md  Bootstrap.bat  Bootstrap.sh  CMakeLists.txt  HoloPlayground.sln  README.md  vcpkg.json
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt  Core.vcxitems  Platform.ixx  XR.Platform.ixx
Engine/Core/include/platform/: IPlatform.h
Engine/Core/src/: stub.cpp
Engine/Dx11/: Dx11.vcxitems
Engine/Engine/: Core.DeltaTime.ixx  Core.FrameTimer.ixx  Core.GameEngine.ixx  Core.Platform.ixx  Core.ixx  Core.vcxitems.filters  Engine.vcxitems  Engine.vcxitems.filters  Math.Camera.ixx  Math.Transform.ixx  Space.ixx  Systems.IEngineSystem.ixx  Systems.ixx  XR.Platform.ixx  XR.Service.ixx  XR.ixx  engine_openxr.h
Engine/OpenXR/: CMakeLists.txt
Engine/OpenXR/include/: XrPlatform.h  xr_stub.h
Engine/OpenXR/src/: XrPlatform.cpp  stub.cpp
Engine/Vulkan/: CMakeLists.txt  VK.RenderEngine.ixx  Vulkan.vcxitems
Engine/Vulkan/src/: stub.cpp
Targets/: CMakeLists.txt
Targets/Desktop/: CMakeLists.txt
Targets/DesktopVR/: DesktopVR.vcxproj  DesktopVR.vcxproj.filters  SDL.Platform.ixx  main.cpp  vcpkg.json
Targets/Hololens2/: Hololens.Platform.ixx  Hololens2.vcxproj  Hololens2.vcxproj.filters  Package.appxmanifest  main.cpp  packages.config  readme.txt  vcpkg.json
Targets/Hololens2/Content/: ShaderStructures.h  SpatialInputHandler.cpp  SpatialInputHandler.h  SpinningCubeRenderer.cpp  SpinningCubeRenderer.h
